fix lists multiline alignment

--- a/assets/components/atoms/list/list.scss
+++ b/assets/components/atoms/list/list.scss
@@ -8,15 +8,18 @@
     list-style-type: none;
     padding-left: $spacer;
 
+    $bullet-size: $spacer * 0.8;
+
     &:before {
       content: '\2022';
       display: inline-block;
       padding-right: 0.3rem;
-      height: 0.9rem;
+      width: $bullet-size;
+      height: $bullet-size;
+      margin-left: $bullet-size * -1;
       font-size: 1.1rem;
-      line-height: 0.9rem;
+      line-height: $bullet-size;
       color: $red;
-      margin-left: $spacer * -1;
     }
   }
 
@@ -38,16 +41,17 @@
   li {
     list-style-type: none;
     padding-left: $spacer;
+    position: relative;
 
     &:before {
       content: counter(item);
       counter-increment: item;
-      display: inline-block;
-      padding-right: 0.5rem;
+      position: absolute;
+      top: 0.32rem;
+      right: calc(100% - 0.5rem);
       font-size: 0.8rem;
       font-weight: $font-weight-bold;
       color: $red;
-      margin-left: $spacer * -1;
     }
   }
 
